--- a/overview-steps.html
+++ b/overview-steps.html
@@ -115,71 +115,71 @@ $(document).ready(function() {
                       <tr>
               <td class="location">com.testing.eMAG.steps.HomeSteps.iAcceptSiteCookies()</td>
               <td>4</td>
-              <td class="duration" data-value="754568589">754ms</td>
-              <td class="duration" data-value="188642147">188ms</td>
+              <td class="duration" data-value="1305438468">1s 305ms</td>
+              <td class="duration" data-value="326359617">326ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.testing.eMAG.steps.HomeSteps.iGoToTheEMAGOffers()</td>
               <td>2</td>
-              <td class="duration" data-value="5195137964">5s 195ms</td>
-              <td class="duration" data-value="2597568982">2s 597ms</td>
+              <td class="duration" data-value="5391813241">5s 391ms</td>
+              <td class="duration" data-value="2695906620">2s 695ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.testing.eMAG.steps.HomeSteps.iHaveNavigateToEMAGHomePage()</td>
               <td>4</td>
-              <td class="duration" data-value="38672058">038ms</td>
-              <td class="duration" data-value="9668014">009ms</td>
+              <td class="duration" data-value="61073136">061ms</td>
+              <td class="duration" data-value="15268284">015ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.testing.eMAG.steps.HomeSteps.iSearchForTheFollowingPhoneManufacture(java.lang.String)</td>
               <td>1</td>
-              <td class="duration" data-value="3952323306">3s 952ms</td>
-              <td class="duration" data-value="3952323306">3s 952ms</td>
+              <td class="duration" data-value="4588841312">4s 588ms</td>
+              <td class="duration" data-value="4588841312">4s 588ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.testing.eMAG.steps.HomeSteps.iSearchForTheFollowingTVManufacture(java.lang.String)</td>
               <td>1</td>
-              <td class="duration" data-value="4039262315">4s 039ms</td>
-              <td class="duration" data-value="4039262315">4s 039ms</td>
+              <td class="duration" data-value="4400539611">4s 400ms</td>
+              <td class="duration" data-value="4400539611">4s 400ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.testing.eMAG.steps.Hook.TearDownTest(io.cucumber.java.Scenario)</td>
               <td>4</td>
-              <td class="duration" data-value="456371232">456ms</td>
-              <td class="duration" data-value="114092808">114ms</td>
+              <td class="duration" data-value="441279303">441ms</td>
+              <td class="duration" data-value="110319825">110ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.testing.eMAG.steps.Hook.initializeTest(io.cucumber.java.Scenario)</td>
               <td>4</td>
-              <td class="duration" data-value="33783807956">33s 783ms</td>
-              <td class="duration" data-value="8445951989">8s 445ms</td>
+              <td class="duration" data-value="134390745240">2m 14s 390ms</td>
+              <td class="duration" data-value="33597686310">33s 597ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.testing.eMAG.steps.OffersSteps.iClickOnTheResealedOffers()</td>
               <td>1</td>
-              <td class="duration" data-value="2188929346">2s 188ms</td>
-              <td class="duration" data-value="2188929346">2s 188ms</td>
+              <td class="duration" data-value="3560092387">3s 560ms</td>
+              <td class="duration" data-value="3560092387">3s 560ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.testing.eMAG.steps.OffersSteps.iShouldSeeTheOffersPage()</td>
               <td>1</td>
-              <td class="duration" data-value="34384993">034ms</td>
-              <td class="duration" data-value="34384993">034ms</td>
+              <td class="duration" data-value="45730050">045ms</td>
+              <td class="duration" data-value="45730050">045ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.testing.eMAG.steps.OffersSteps.iShouldSeeTheResealedOffersPage()</td>
               <td>1</td>
-              <td class="duration" data-value="105255156">105ms</td>
-              <td class="duration" data-value="105255156">105ms</td>
+              <td class="duration" data-value="33834629">033ms</td>
+              <td class="duration" data-value="33834629">033ms</td>
               <td class="passed">100.00%</td>
             </tr>
                   </tbody>
@@ -188,8 +188,8 @@ $(document).ready(function() {
           <tr>
             <td>10</td>
             <td>23</td>
-            <td class="duration">50s 548ms</td>
-            <td class="duration">2s 197ms</td>
+            <td class="duration">2m 34s 219ms</td>
+            <td class="duration">6s 705ms</td>
             <td>Totals</td>
           </tr>
         </tfoot>
